change name of the repo from anan to cloud

--- a/hw2/Dockerfile
+++ b/hw2/Dockerfile
@@ -1,5 +1,5 @@
 ARG CODE_VERSION=3.11.5
-FROM alpine:${CODE_VERSION} AS bgu-anan-iperf
+FROM alpine:${CODE_VERSION} AS bgu-cloud-iperf
 RUN apk update
 RUN apk add iperf3
 EXPOSE 5201
